# portname

./: LICENSE  README.md  TESTING.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: com.github.portname.policy  portname.desktop
portname/: __main__.py  automute.py  cli.py  core.py  gui.py  privilege.py  wireplumber.py
tests/: test_cli.py  test_core.py  test_rename_revert.py  test_wireplumber.py
tests/docker/: test_arch.sh  test_common.sh  test_fedora.sh
